# mailsender

./: .dockerignore  .gitignore  Dockerfile  README.md  conf.ini  pyproject.toml  uwsgi.ini
mail_sending_service/: __main__.py  app.py  views.py  wsgi.py
mail_sending_service/mail/: senders.py
static/: api_doc.html
tests/: test_mail_sender.py
tests/views/: test_mail_sending.py
