[tool.poetry]
name = "mail-sending-service"
version = "0.1.0"
description = ""
authors = ["Rafał Galczak <r.galczak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-Caching = "^1.9.0"
sendgrid = "^6.5.0"
requests = "^2.25.1"
uWSGI = "^2.0.19"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
waitress = "^1.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
